--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <h2>Samstags im Ersten</h2>
     </div>
     <div id="friday" class="day" onclick="requestPassword('Freitags')">
-        <h2>Freitags im Ersten</h2>
+        <h2>Freitagsparty</h2>
     </div>
   </div>
 
